fix the reset on scrollbars and fix button hover color not showing up.

--- a/base/general/_general-reset.scss
+++ b/base/general/_general-reset.scss
@@ -527,16 +527,13 @@ table{
 \*------------------------------------*/
 
 @if $always-show-scrollbars == true{
-    .show-scrollbars{
-        ::-webkit-scrollbar {
-            -webkit-appearance: none;
-            width: 7px;
-        }
+    .show-scrollbars::-webkit-scrollbar {
+        -webkit-appearance: none;
+        width: 7px;
+    }
 
-        ::-webkit-scrollbar-thumb {
-            border-radius: 4px;
-            background-color: rgba(0, 0, 0, .5);
-            -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
-        }
+    .show-scrollbars::-webkit-scrollbar-thumb {
+        border-radius: 4px;
+        background-color: rgba(0, 0, 0, .5);
     }
 }
