--- a/objects/buttons/_button-print.scss
+++ b/objects/buttons/_button-print.scss
@@ -26,10 +26,12 @@
                 &:hover,
                 &:active {
                     @each $inner-prop, $inner-val in $val {
-                        @if $inner-prop == 'background-hover' {
+                        @if $inner-prop == 'background-color-hover' {
                             background: map-get($val, background-hover);
                         } @else if $inner-prop == 'border-color-hover' {
                             border: solid 1px map-get($val, border-color-hover);
+                        } @else if $inner-prop == 'text-color-hover' {
+                            color: map-get($val, text-color-hover);
                         }
                     }
                 }
